--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
         </div>
         <!-- Body(detail) -->
         <div class="container" v-show="page=='game'">
-                <div class="row">
+            <div class="row" v-if="detail.video">
+                <video :src="detail.video" width="500" style="margin: auto" controls></video>
+            </div>
+
+            <div class="row">
 
                 <div class="col-md-4" v-for="des in detail.descs">
                     <div class="card mb-4 shadow-sm">
@@ -57,7 +61,9 @@
                         </div>
                     </div>
                 </div>
+                
 
+                
                 <!-- <div class="col-md-4" v-show="detail.scrinfos!=undefined">
                     <div class="card mb-4 shadow-sm">
                         <div class="card-header">
